# A-Knee-Cannot-Have-Lunge-Disease-Out-Of-Distribution-Detection-With-In-Distribution-Voting

./: LICENSE  README.md  pyproject.toml
idv/: #f8cc9bbd6de65a5bd5a662dbf1b00a8be4b52c59#  chestxray14.py  datamodule.py  densenet.py  experiment.py  imagenet.py  irma.py  mahalanobis.py  main.py  metrics.py  model.py  mura.py  ood_detection.py  rsna_bone_age.py
models/.ipynb_checkpoints/: idv_imagenet_and_irma-checkpoint.yaml
models/chexnet/: boneage_test.pth  boneage_train.pth  boneage_val.pth  chexnet.yaml  cxr14_test.pt  cxr14_val.pt  irma_test.pth  irma_train.pth  irma_train_50.pth  irma_val.pth  mahalanobis_test_boneage.pth  mahalanobis_test_irma.pth  mahalanobis_test_irma_exclude_no_finding.pth  mahalanobis_test_mura.pth  mahalanobis_val_boneage.pth  mahalanobis_val_irma.pth  mahalanobis_val_mura.pth  mura_test.pth  mura_val.pth
models/idv_boneage/: boneage_test.pth  boneage_val.pth  cxr14_test.pt  cxr14_val.pt  idv_boneage.yaml  irma_test.pth  irma_val.pth  mura_test.pth  mura_val.pth
models/idv_boneage_fixed/: boneage_test.pth  boneage_train.pth  boneage_val.pth  cxr14_test.pt  cxr14_val.pt  idv_boneage_fixed.yaml  irma_test.pth  irma_train.pth  irma_val.pth  mura_test.pth  mura_val.pth
models/idv_imagenet/: boneage_test.pth  boneage_train.pth  boneage_val.pth  cxr14_test.pt  idv_imagenet.yaml  irma_test.pth  irma_train.pth  irma_val.pth  mura_test.pth  mura_val.pth
models/idv_imagenet_and_irma/: boneage_test.pth  boneage_train.pth  boneage_val.pth  chexpert_test.pth  cxr14_test.pt  irma_test.pth  irma_train.pth  irma_val.pth  mura_test.pth  mura_val.pth
notebooks/: CXR14_Test.ipynb  Dataloader.ipynb  Model.ipynb  OOD_Detection_BoneAge.ipynb  OOD_Detection_IDV_All_Models.ipynb  OOD_Detection_IRMA.ipynb  OOD_Detection_MURA.ipynb
(+64 files in other folders)
