[tool.poetry]
name = "idv"
version = "1.0.0"
description = "Official implementation of \"A knee cannot have lung disease: out-of-distribution detection with in-distribution voting using the medical example of chest X-Ray classification\""
authors = ["Alessandro Wollek <alessandro.wollek@tum.de>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "idv"}]

[tool.poetry.dependencies]
# Install these manually using
# %pip install torch=="1.8.1+cu111" torchvision=="0.9.1+cu111" --extra-index-url https://download.pytorch.org/whl/cu111
# torch = { version = "1.8.1+cu111"}
# torchvision = { version = "0.9.1+cu111"}
python = "3.8"
pytorch-lightning = "^1.4.4"
pandas = "^1.3.2"
torchmetrics = "^0.5.1"
setuptools = "^63.2.0"
wheel = "^0.37.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ciip-dataloader = {path = "../ciip-dataloader", develop = true}
guildai = "^0.7.3"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
ipdb = "^0.13.9"
autopep8 = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
